@@ -1,14 +1,14 @@
 % File src/library/grDevices/man/pdf.options.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2011 R Core Team
+% Copyright 1995-2024 R Core Team
 % Distributed under GPL 2 or later
 
 \name{pdf.options}
 \alias{pdf.options}
-\title{Auxiliary Function to Set/View Defaults for Arguments of pdf}
+\title{Auxiliary Function to Set/View Defaults for Arguments of \code{pdf}}
 \description{
   The auxiliary function \code{pdf.options} can be used to set or view
-  (if called without arguments) the default values for some of the
+  (if called without arguments) the default values for most of the
   arguments to \code{\link{pdf}}.
 
   \code{pdf.options} needs to be called before calling \code{pdf},
@@ -20,10 +20,12 @@ pdf.options(\dots, reset = FALSE)
 }
 \arguments{
   \item{\dots}{arguments \code{width}, \code{height}, \code{onefile},
-    \code{family}, \code{title}, \code{fonts}, \code{paper},
-    \code{encoding}, \code{pointsize}, \code{bg}, \code{fg},
-    \code{pagecentre}, \code{useDingbats}, \code{colormodel},
-    \code{fillOddEven} and \code{compress} can be supplied.}
+    \code{family}, \code{title}, \code{fonts}, \code{version}, \code{paper},
+    \code{encoding}, \code{bg}, \code{fg}, \code{pointsize},
+    \code{pagecentre}, \code{colormodel}, \code{useDingbats},
+    \code{useKerning}, \code{fillOddEven}, \code{compress},
+    \code{timestamp}, \code{producer} and \code{author}
+    can be supplied.}
   \item{reset}{logical: should the defaults be reset to their
     \sQuote{factory-fresh} values?}
 }
